--- a/simon工作汇报/20200923日报.md
+++ b/simon工作汇报/20200923日报.md
@@ -1,10 +1,8 @@
-# 制作通用监控解决方案合作咨询页面
-
-根据设计稿，完善合作咨询页面的业务逻辑，包括表单验证和表单提交后的行为
+# AI开放平台
 
 ## 完成的工作
 
-- 完成合作咨询页面的表单验证
+- 完成监控解决方案合作咨询页面的表单验证
 
 - 完善表单提交后的行为
 
