--- a/simon工作汇报/实习笔记.md
+++ b/simon工作汇报/实习笔记.md
@@ -16,3 +16,6 @@ git checkout -b 分支名称
 
 ### 切换账号
 git config --global user.email "liusm@deepblueai.com"
+
+## vue.config
+productionSourceMap: false, // 生产打包时不输出map文件，增加打包速度
