更新个人简历，删去开源项目展示

--- a/刘思民个人简历/个人简历.md
+++ b/刘思民个人简历/个人简历.md
@@ -11,13 +11,12 @@
 
 - 能够使用 HTML5 标签编写 `语义化`的页面
 - 熟练使用CSS/SCSS、`文档流`，`盒模型`，flex/grid 布局定位
-- 掌握 JavaScript，`ES6 语法`，DOM 操作，BOM，Ajax，跨域，闭包，`原型链`，`this`，面向对象，Promise的使用
+- 掌握 JavaScript，`ES6 语法`，DOM 操作，BOM，Ajax，闭包，`原型链`，`this`，面向对象，Promise的使用
 - 掌握 `Vue` / `Vuex` / `Vue-Router` 的使用
 - 有 Node.js 的使用经验
-- 能够使用 `Webpack` 配置打包，npm 包管理机制
 - 掌握 Git/GitHub 工作部署流程
 # 实习经历
-**公司**：深兰科技（上海）有限公司 （北京AI研发中心 ）  <span style="color:#9fa3b0;font-size:13px;">2020.09 - 至今</span>
+**公司**：深兰科技（上海）有限公司 （北京AI研发中心 ）  <span style="color:#9fa3b0;font-size:13px;">2020.09 - 2021.08</span>
 
 **职位**：WEB前端开发实习生
 
@@ -27,41 +26,40 @@
 2. 使用vue以及ui框架配合产品 UI 完成新页面的实现，以及研究并改善用户体验。
 3. 配合后台开发人员完成前后端数据交互任务，实现产品功能以及后期代码维护。
 
-# 开源项目及作品
+## 项目经历
 
-## Flappybird游戏
+### 笔迹鉴定业务平台前端负责人 <span style="color:#9fa3b0;font-size:13px;">2021.06 - 2021.08</span>
 
-<img src="./img/flappybird1.png" alt="image-20200516222054924" style="zoom: 33%;" />
+项目描述：该平台是为上海市某派出所实现涉案人员笔迹数字化而开发的小型项目。主要功能有人员档案管理、案件管理以及笔迹鉴定与比对。本项目主要可分为三个模块：登录鉴权、笔迹鉴定、样本库管理。该项目的前端部分主要由本人独立完成。
 
-#### 使用技术
+1. 与产品、UI进行方案与原型审核。
+2. 使用vue以及ui框架配合产品 UI 完成新页面的实现，以及研究并改善用户体验。
+3. 配合后台开发人员完成前后端数据交互任务，实现产品功能以及后期代码维护。
+4. 一个月内完成平台的一期需求并交付，两周完成二期需求，交付后部署。
 
-Vue，JavaScript，SCSS，localStorage
+主要技术栈：vue、UI框架： view-design、DOM、axios、websocket、vue-simple-uploader
 
-#### 项目概述
+### 深延公司官网 <span style="color:#9fa3b0;font-size:13px;">2021.01 - 2021.04</span>
 
-**Web版的《Flappy Bird》** flappybird 游戏中玩家控制一只小鸟，跨越由各种不同长度水管所组成的障碍。
+项目描述：官网PC端和移动端
+工作内容：开发包括首页、应用场景、新闻中心、关于我们、加入我们以及公司其他平台的介绍页等页面
+根据原型图和UI设计稿实现符合产品需求的页面
+主要技术栈：vue、UI框架： view-design（PC端）、vant（移动端）、DOM、flex、axios
 
-#### 主要工作
+### 深延公司官网后台 <span style="color:#9fa3b0;font-size:13px;">2020.12 - 2021.02</span>
 
-- 利用Photoshop进行图片的修改，如实现背景图无缝无限循环滚动。
-- 封装小鸟组件，实现的行为有随计时器快慢上下循环飞行和扇动翅膀，一定程度上实现复用性。
-- 采用矩形与矩形的碰撞检测算法实现碰撞检测。
-- 使用本地存储技术（localStorage）记录游戏数据，比如分数最高分的记录等。
-- 页面布局考虑到不同设备，移动端和pc端均有较好体验。
+项目描述：主要负责对访客信息以及他触发的事件经行统计、管理以及可视化展示
+工作内容：开发包括全站分析、数据中心、咨询管理等页面，根据原型图和UI设计稿实现符合产品需求的页面,熟悉了 echarts 可视化图形工具的使用
 
- [**GitHub 地址**](https://github.com/liusimin0206/flappybirdGame)     [**作品链接**](https://liusimin0206.github.io/flappybirdGame/)
+主要技术栈：vue、UI框架： view-design、echarts、axios
 
-## 兴凯湖国家地质公园地质遗迹数据管理系统（demo）
+### 智能数据标注平台 <span style="color:#9fa3b0;font-size:13px;">2020.11 - 2021.01</span>
 
-<img src="./img/xingkaihu1.png" alt="image-20200516222054911" style="zoom: 33%;" />
+工作内容：利用echarts完成管理员和标注员的工作数据总览页面的开发
+主要技术栈：vue、UI框架：view-design、echarts、axios
 
-#### 功能描述
+### AI开放平台 <span style="color:#9fa3b0;font-size:13px;">2020.09 - 2020.12</span>
 
-兴凯湖国家地质公园地质遗迹数据管理系统旨在实现水体检测、土壤采样等环境数据与地图相结合，通过网页的方式在地图上进行展示，表达采样点的分布状况和数据的表格化展示。
-
-#### 主要工作
-
-- Vue-router:前端路由，实现不刷新加载页面
-- Axios:前后端交互，可向服务器发送get请求，获取水体检测、土壤采样等环境数据，并将其展示在页面上
-
- [**GitHub 地址**](https://github.com/liusimin0206/Xingkaihu)     [**作品链接**](https://liusimin0206.github.io/Xingkaihu/#/showMap?currentTable=%E5%9C%B0%E4%B8%8B%E6%B0%B4%E6%A0%B7%E9%87%87%E9%9B%86%E8%AE%B0%E5%BD%95)
+项目描述：是面向行业用户与生态合作伙伴打造的一站式AI模型开发和应用平台。
+工作内容：负责文档中心页面的开发与维护，最后按照需求开发通用文档以便后台进行直接上传部署
+主要技术栈：vue、UI框架：ant-design-vue、vue-router
