--- a/simon工作汇报/8.12日报.md
+++ b/simon工作汇报/8.12日报.md
@@ -6,21 +6,25 @@
 
 ## 智能数据标注平台SaaS版本
 
-### 平台管理员
-
-- 新增管理员窗口调一下两侧的空白大小
-
-### 登陆注册表单相关
-
-- 修改用户名校验和新增管理员的密码输入框的默认值
-
 ### 项目管理员
 
-- 联调任务列表和人员管理
+#### 人员管理
+
+- 加入项目管理员-人员管理相关接口
+
+- 联调项目管理员--人员列表
+
+- 优化修改操作员信息的弹窗
+
+- 新增人员组件中删除项目名称字段，角色和方向加上具体选项
+
+#### 任务管理
+
+- 联调任务列表和任务详情
 
 ## 下一步的工作
 
-- 开发项目管理员任务详情
+- 开发项目管理员任务详情中人员设置和整体进度部分
 
 感谢！祝工作顺利！天天开心！
 
