--- a/刘思民个人简历/个人简历.md
+++ b/刘思民个人简历/个人简历.md
@@ -1,11 +1,24 @@
 # 个人信息
 
-- 姓名：**刘思民**<img src='./img/证件照.jpg' style='float:right; width:140px;height:183 px; margin-right:48px;border:1px solid'/>
-- 硕士研究生（中国地质大学·北京） |  22年应届生 
-- GPA：3.76/4.0（专业前5%）
+- 姓名：**刘思民**<img src='./img/证件照.jpg' style='float:right; width:100px;height:143 px; margin-right:48px;border:1px solid'/>
 - 手机：18310511830
 - 邮箱：794144013@qq.com
 - Github: https://github.com/liusimin0206
+
+# 教育经历
+
+**中国地质大学(北京)**
+
+测绘科学与技术  全日制 硕士研究生  <span style="color:#9fa3b0;font-size:13px;">2019.09 - 2022.06</span>
+
+- GPA：3.76/4.0（专业前5%）
+- 荣誉：专业一等奖学金
+
+**中国地质大学(北京)**
+
+地理信息科学  全日制 学士 <span style="color:#9fa3b0;font-size:13px;">2015.09 - 2019.06</span>
+
+- GPA：3.36/4.0
 
 # 专业技能
 
@@ -16,6 +29,7 @@
 - 有 Node.js 的使用经验
 - 掌握 Git/GitHub 工作部署流程
 # 实习经历
+
 **公司**：深兰科技（上海）有限公司 （北京AI研发中心 ）  <span style="color:#9fa3b0;font-size:13px;">2020.09 - 2021.08</span>
 
 **职位**：WEB前端开发实习生
